     This also makes it compatible with vHost Post-copy Live Migration.
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
     * 'dpif/show' and 'list-commands' now support output in JSON format.
   - Userspace datapath:
     * Conntrack now supports 'random' flag for selecting ports in a range
       while natting and 'persistent' flag for selection of the IP address
       from a range.
     * IPv6 UDP tunnel encapsulation including Geneve and VXLAN will now
       honour the csum option.  Configuring the interface with
       "options:csum=false" now has the same effect as the udp6zerocsumtx
       option has with Linux kernel UDP tunnels.
   - The primary development branch has been renamed from 'master' to 'main'.
     The OVS tree remains hosted on GitHub.
     https://github.com/openvswitch/ovs.git
   - DPDK:
     * OVS validated with DPDK 23.11.1.
     * Link status changes are now handled via interrupt mode if the DPDK
       driver supports it.  It is possible to revert to polling mode by setting
       per interface 'options:dpdk-lsc-interrupt' to 'false'.
   - Python:
     * Added custom transaction support to the Idl via add_op().
     * Added support for different output formats like 'json' to Python's
       unixctl classes.
   - Tunnels:
     * Previously the kernel datapath did not enable UDP checksums by default
       in IPv6 tunnels.  This behaviour is non-standard, differs from the
       Linux kernel, and as also different than the userspace datapath.  Now
       these tunnels will calculate checksums by default and that behaviour can
       be changed with "options:csum=false" just as with the userspace
       datapath.
   - Local sampling is introduced.  It reuses the OpenFlow sample action and
     allows samples to be emitted locally (instead of via IPFIX) in a